verify/tests/cases/errors/next_without_for.b
REM Test: NEXT without matching FOR (should fail)
x% = 1
NEXT
